# Puf

./: .gitignore  .gitmodules  README.md  config.py  database.py  main.py  requirements.txt  setup.py
src/frontend/: .gitignore  index.html  package.json  vite.config.js
src/frontend/src/: App.jsx  index.css  main.jsx  routes.jsx  theme.js
src/frontend/src/components/: Compare.jsx  Dashboard.jsx  Issues.jsx  Logo.jsx  ModelList.jsx  ModelVersions.jsx  Navbar.jsx  Profile.jsx  Repository.jsx  Settings.jsx  Sidebar.jsx  UploadModel.jsx  User.jsx  VersionControl.jsx
src/frontend/src/components/analytics/: AnalyticsDashboard.jsx
src/frontend/src/components/auth/: Login.jsx  ProtectedRoute.jsx  Register.jsx
src/frontend/src/components/repository/: FileExplorer.jsx  PerformanceMetrics.jsx  ReadmeViewer.jsx
src/frontend/src/context/: AuthContext.jsx
src/frontend/src/pages/: Compare.jsx  Dashboard.jsx  Experiments.jsx  Login.jsx  ModelDetail.jsx  Models.jsx  Profile.jsx  Register.jsx  Repositories.jsx  Settings.jsx  Starred.jsx  Teams.jsx
src/frontend/src/services/: api.js  cliService.js  modelService.js
src/puf/: pyproject.toml
