[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puf-cli"
version = "0.1.2"
description = "Python Universal Framework for Model Version Control"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Pooja Patel", email = "poojapatel013@gmail.com"}
]
keywords = ["machine-learning", "version-control", "ml-ops", "model-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Version Control",
]

[project.dependencies]
click = ">=8.0.0"
requests = ">=2.25.0"
rich = ">=10.0.0"
pyyaml = ">=5.4.0"
pymongo = ">=4.0.0"
python-dotenv = ">=0.19.0"
fastapi = ">=0.68.0"
uvicorn = ">=0.15.0"
python-multipart = ">=0.0.5"
pydantic = ">=2.0.0"
passlib = ">=1.7.4"
python-jose = ">=3.3.0"
bcrypt = ">=3.2.0"
aiofiles = ">=0.8.0"
motor = ">=2.5.0"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
matplotlib = ">=3.4.0"

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.8.0"]
torch = ["torch>=1.10.0"]
sklearn = ["scikit-learn>=0.24.0"]
all = [
    "tensorflow>=2.8.0",
    "torch>=1.10.0",
    "scikit-learn>=0.24.0"
]

[project.scripts]
puf = "puf.cli:cli"

[project.urls]
Homepage = "https://github.com/PoojasPatel013/puf"
Repository = "https://github.com/PoojasPatel013/puf"